--- a/assg1.html
+++ b/assg1.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-900">
-  <header class="bg-blue-500 p-4 text-white text-center">
+  <header class="bg-purple-500 p-4 text-white text-center">
     <h1 class="text-2xl font-bold">My Portfolio</h1>
   </header>
 
