--- a/assg2.html
+++ b/assg2.html
@@ -38,7 +38,7 @@
       <div class="row g-4">
         <div class="col-md-4">
           <div class="card">
-            <img src="https://via.placeholder.com/300" class="card-img-top" alt="Project 1">
+            <img src="https://plus.unsplash.com/premium_photo-1677545183884-421157b2da02?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Project 1">
             <div class="card-body">
               <h5 class="card-title">SEO Optimization Tool</h5>
               <p class="card-text">A tool for keyword analysis and backlink strategies developed during my internship.</p>
