--- a/assg2.html
+++ b/assg2.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
   <style>
     body {
-      background-color: #a64dff;
+      background-color: #e6e6e6;
     }
     .card img {
       object-fit: cover;
