--- a/assg2.html
+++ b/assg2.html
@@ -48,7 +48,7 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="https://via.placeholder.com/300" class="card-img-top" alt="Project 2">
+            <img src="https://media.istockphoto.com/id/1434414228/photo/stern-sad-cat-isolated-on-white-background.jpg?s=1024x1024&w=is&k=20&c=DgQLfrTloau1IUqW8Blw-De6LQKCvMy4jjrUSO3mSBM=" class="card-img-top" alt="Project 2">
             <div class="card-body">
               <h5 class="card-title">Technical SEO Analyzer</h5>
               <p class="card-text">An analyzer for optimizing site structure and enhancing search engine visibility.</p>
@@ -58,7 +58,7 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="https://via.placeholder.com/300" class="card-img-top" alt="Project 3">
+            <img src="https://media.istockphoto.com/id/1313021528/photo/cat-hunting-to-mouse-at-home-burmese-cat-face-before-attack-close-up.jpg?s=1024x1024&w=is&k=20&c=HvAcUje6z1fxjwxYHLJ-JaKk7-cbvi55KKP_HNJ6Ido=" class="card-img-top" alt="Project 3">
             <div class="card-body">
               <h5 class="card-title">Engagement Metrics Dashboard</h5>
               <p class="card-text">A dashboard showcasing user engagement metrics using Google Analytics data.</p>
